# hermes-addon-slack-reaction-intents

./: .gitignore  LICENSE  MANIFEST.in  README.md  plugin.yaml  pyproject.toml
slack_reaction_intents/: __init__.py  config.py  handlers.py  plugin.py  prompts.py
tests/: conftest.py  test_handlers.py
